force-app/main/default/objects/Lead/fields/Email_Log__c.field-meta.xml
<CustomField>
    <fullName>Email_Log__c</fullName>
    <label>Email Log</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>