force-app/main/default/objects/Lead/fields/Email_Message__c.field-meta.xml
<CustomField>
    <fullName>Email_Message__c</fullName>
    <label>Email Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>