force-app/main/default/objects/Lead/fields/Follow_Up_Date__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Date__c</fullName>
    <description>The date when a follow-up should be sent to this lead.</description>
    <label>Follow Up Date</label>
    <type>Date</type>
</CustomField>