force-app/main/default/objects/Lead/fields/Follow_Up_Log__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Log__c</fullName>
    <label>Follow Up Log</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>