force-app/main/default/objects/Lead/fields/Follow_Up_Sent__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether a follow-up reminder has already been sent for this lead.</description>
    <label>Follow Up Sent</label>
    <type>Checkbox</type>
</CustomField>