force-app/main/default/objects/Lead/fields/Previous_Email_Message__c.field-meta.xml
<CustomField>
    <fullName>Previous_Email_Message__c</fullName>
    <label>Previous Email Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>