force-app/main/default/objects/Lead/listViews/Web_Inquiry.listView-meta.xml
<ListView>
    <fullName>Web_Inquiry</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>LEAD.COMPANY</field>
        <operation>equals</operation>
        <value>Website Inquiry</value>
    </filters>
    <label>Web Inquiry</label>
</ListView>